--- a/src/app/app/my-transaction/components/inventory.component.html
+++ b/src/app/app/my-transaction/components/inventory.component.html
@@ -82,12 +82,12 @@
 
 
 	<div *ngIf="vLoadShow">
-		<div>
+		<div *ngFor="#vLoadProduct of getLoadProductList(); #i = index">
 			<div class="item-container" (click)="subLoadMenuShow(i)">
 				<div class="container">
 					<div class='cell width-10 inventory-load'></div>
 					<div class='cell'>
-				        <div class='container'><div class='cell width-80 padding-left-5 bold' [ngClass]="{title: vSubLoadMenuShow[i]}">Smartload</div></div>
+				        <div class='container'><div class='cell width-80 padding-left-5 bold' [ngClass]="{title: vSubLoadMenuShow[i]}">{{vLoadProduct.productName}}</div></div>
 				        <div class='container' *ngIf="!vSubLoadMenuShow[i]">
 				        	<div class='cell'>
 				        		<div class="container">
@@ -110,7 +110,7 @@
 					<div class='cell'>
 				        <div class='container'><div class='cell width-45 padding-left-5 bold'>Total Inventory</div></div>
 				        <div class='container'><div class='cell width-45 padding-left-10'>Beginning Balance</div></div>
-				        <div class='container'><div class='cell width-45 padding-left-10 small'>As of 2016-04-22  13:00</div></div>
+				        <div class='container'><div class='cell width-45 padding-left-10 small'>As of {{vLoadProduct.lastModified}}</div></div>
 				        <div class='container'><div class='cell width-45 padding-left-10'>Delivery</div></div>
 				        <div class='container'><div class='cell width-45 padding-left-5 bold'>Sales</div></div>
 				        <div class='container'><div class='cell width-45 padding-left-10'>Sold</div></div>
@@ -122,10 +122,10 @@
 				        <div class='container'><div class='cell width-45 padding-left-10'>Others</div></div>
 				    </div>
 					<div class='cell'>
-				        <div class='container'><div class='cell width-45 align-right bold'>600</div></div>
-				        <div class='container'><div class='cell width-45 align-right'>100</div></div>
+				        <div class='container'><div class='cell width-45 align-right bold'>{{(toNumber(vLoadProduct.beginningBalance)+toNumber(vLoadProduct.newDelivery)) | number}}</div></div>
+				        <div class='container'><div class='cell width-45 align-right'>{{toNumber(vLoadProduct.beginningBalance) | number}}</div></div>
 				        <div class='container'><div class='cell width-45 align-right'></div></div>
-				        <div class='container'><div class='cell width-45 align-right'>100</div></div>
+				        <div class='container'><div class='cell width-45 align-right'>{{toNumber(vLoadProduct.newDelivery) | number}}</div></div>
 				        <div class='container'><div class='cell width-45 align-right bold'>100</div></div>
 				        <div class='container'><div class='cell width-45 align-right'>100</div></div>
 				        <div class='container'><div class='cell width-45 align-right bold'>700</div></div>
@@ -142,12 +142,12 @@
 	</div>
 
 	<div *ngIf="vPhysicalShow">
-		<div *ngFor="#vProduct of getProductList(); #i = index">
+		<div *ngFor="#vPhysicalProduct of getPhysicalProductList(); #i = index">
 			<div class="item-container" (click)="subPhysicalMenuShow(i)">
 				<div class="container">
 					<div class='cell width-10 inventory-physical'></div>
 					<div class='cell'>
-				        <div class='container'><div class='cell width-80 padding-left-5 bold' [ngClass]="{title: vSubPhysicalMenuShow[i]}">{{vProduct.productName}}</div></div>
+				        <div class='container'><div class='cell width-80 padding-left-5 bold' [ngClass]="{title: vSubPhysicalMenuShow[i]}">{{vPhysicalProduct.productName}}</div></div>
 				        <div class='container' *ngIf="!vSubPhysicalMenuShow[i]">
 				        	<div class='cell'>
 				        		<div class="container">
@@ -155,7 +155,7 @@
 								        <div class='container'><div class='cell width-40 padding-left-5'>Ending Balance</div></div>
 								    </div>
 									<div class='cell'>
-								        <div class='container'><div class='cell width-40 align-right bold'>{{toNumber(vProduct.endingBalance) | number}}</div></div>
+								        <div class='container'><div class='cell width-40 align-right bold'>{{toNumber(vPhysicalProduct.endingBalance) | number}}</div></div>
 								    </div>
 								</div>
 							</div>
@@ -177,13 +177,13 @@
 				        <div class='container'><div class='cell width-45 padding-left-5 bold'>Ending Balance</div></div>
 				    </div>
 					<div class='cell'>
-				        <div class='container'><div class='cell width-45 align-right bold'>{{(toNumber(vProduct.beginningBalance)+toNumber(vProduct.newDelivery)) | number}}</div></div>
-				        <div class='container'><div class='cell width-45 align-right'>{{toNumber(vProduct.beginningBalance) | number}}</div></div>
-				        <div class='container'><div class='cell width-45 align-right'>{{toNumber(vProduct.newDelivery) | number}}</div></div>
-				        <div class='container'><div class='cell width-45 align-right bold'>{{(toNumber(vProduct.sold)+toNumber(vProduct.transferBack)) | number}}</div></div>
-				        <div class='container'><div class='cell width-45 align-right'>{{toNumber(vProduct.sold) | number}}</div></div>
-				        <div class='container'><div class='cell width-45 align-right'>{{toNumber(vProduct.transferBack) | number}}</div></div>
-				        <div class='container'><div class='cell width-45 align-right bold'>{{toNumber(vProduct.endingBalance) | number}}</div></div>
+				        <div class='container'><div class='cell width-45 align-right bold'>{{(toNumber(vPhysicalProduct.beginningBalance)+toNumber(vPhysicalProduct.newDelivery)) | number}}</div></div>
+				        <div class='container'><div class='cell width-45 align-right'>{{toNumber(vPhysicalProduct.beginningBalance) | number}}</div></div>
+				        <div class='container'><div class='cell width-45 align-right'>{{toNumber(vPhysicalProduct.newDelivery) | number}}</div></div>
+				        <div class='container'><div class='cell width-45 align-right bold'>{{(toNumber(vPhysicalProduct.sold)+toNumber(vPhysicalProduct.transferBack)) | number}}</div></div>
+				        <div class='container'><div class='cell width-45 align-right'>{{toNumber(vPhysicalProduct.sold) | number}}</div></div>
+				        <div class='container'><div class='cell width-45 align-right'>{{toNumber(vPhysicalProduct.transferBack) | number}}</div></div>
+				        <div class='container'><div class='cell width-45 align-right bold'>{{toNumber(vPhysicalProduct.endingBalance) | number}}</div></div>
 				    </div>
 				    <div class='cell width-10'></div>
 				</div>
