--- a/src/app/app/basic-call-procedure/components/hc-retailer-sales-order.component.html
+++ b/src/app/app/basic-call-procedure/components/hc-retailer-sales-order.component.html
@@ -28,7 +28,7 @@
         <div class='container'>
             <div class='cell'>
                 <div class='container'><div class='cell align-center width-100 bold'>Price After Discount:</div></div>
-                <div class='container'><div class='cell align-center width-100 bold green'>0.00 ₱</div></div>
+                <div class='container'><div class='cell align-center width-100 bold green'>P 0</div></div>
             </div>
         </div>
     </div>
@@ -38,7 +38,7 @@
                 <div class='container'><div class='cell padding-left-5 width-50'>Price Before Discount</div></div>
             </div>
             <div class='cell'>
-                <div class='container'><div class='cell align-right width-40'>0.00 ₱</div></div>
+                <div class='container'><div class='cell align-right width-40'>P 0</div></div>
             </div>
             <div class='cell width-10'></div>
         </div>
@@ -49,7 +49,7 @@
                 <div class='container'><div class='cell padding-left-5 width-50'>Total Discount Amount</div></div>
             </div>
             <div class='cell'>
-                <div class='container'><div class='cell align-right width-40'>0.00 ₱</div></div>
+                <div class='container'><div class='cell align-right width-40'>P 0</div></div>
             </div>
             <div class='cell width-10'></div>
         </div>
@@ -60,7 +60,7 @@
                 <div class='container'><div class='cell padding-left-5 width-50'>Load Transfer</div></div>
             </div>
             <div class='cell'>
-                <div class='container'><div class='cell align-right width-40'>0.00 ₱</div></div>
+                <div class='container'><div class='cell align-right width-40'>P 0</div></div>
             </div>
             <div class='cell width-10 arrow-right' (click)='gotoAddEditLoadTransfer()'></div>
         </div>
@@ -142,7 +142,7 @@
                 <div class='container'><div class='cell padding-left-5 width-50'>Physical Order</div></div>
             </div>
             <div class='cell'>
-                <div class='container'><div class='cell align-right width-40'>0.00 ₱</div></div>
+                <div class='container'><div class='cell align-right width-40'>P 0</div></div>
             </div>
             <div class='cell width-10 arrow-right' (click)='gotoAddEditPhysicalOrder()'></div>
         </div>
