--- a/src/app/app/close-day/components/detail-collection.component.html
+++ b/src/app/app/close-day/components/detail-collection.component.html
@@ -10,7 +10,7 @@
 	    <div class="container">
 	        <div class='cell'>
                 <div class='container'>
-                	<div class='cell align-center width-100 large'>8,000.00 ₱</div>
+                	<div class='cell align-center width-100 large'>P 8,000</div>
                 </div>
 	        </div>
 	    </div>
@@ -33,7 +33,7 @@
 			</div>
 			<div class='cell'>
 				<div class='container'>
-					<div class='cell width-30 align-right'>6,000.00 ₱</div>
+					<div class='cell width-30 align-right'>P 6,000</div>
 				</div>
 			</div>
 			<div class='cell width-10'></div>
@@ -57,7 +57,7 @@
 			</div>
 			<div class='cell'>
 				<div class='container'>
-					<div class='cell width-30 align-right'>2,000.00 ₱</div>
+					<div class='cell width-30 align-right'>P 2,000</div>
 				</div>
 			</div>
 			<div class='cell width-10'></div>
@@ -81,7 +81,7 @@
 			</div>
 			<div class='cell'>
 				<div class='container'>
-					<div class='cell width-30 align-right'>0.00 ₱</div>
+					<div class='cell width-30 align-right'>P 0</div>
 				</div>
 			</div>
 			<div class='cell width-10'></div>
