--- a/src/app/app/close-day/components/detail-sales-order.component.html
+++ b/src/app/app/close-day/components/detail-sales-order.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class='container'>
 	        <div class='cell'>
-            	<div class='container'><div class='cell align-center width-100'>2,000.00 ₱</div></div>
+            	<div class='container'><div class='cell align-center width-100'>P 2,000</div></div>
             </div>
         </div>
     </div>
@@ -21,7 +21,7 @@
             </div>
             <div class='cell'>
                 <div class='container'><div class='cell padding-right-5 width-50 align-right'></div></div>
-                <div class='container'><div class='cell padding-right-5 width-50 align-right'>5,500.00 &#8369;</div></div>
+                <div class='container'><div class='cell padding-right-5 width-50 align-right'>P 5,500</div></div>
             </div>
         </div>
     </div>
@@ -33,7 +33,7 @@
             </div>
             <div class='cell'>
                 <div class='container'><div class='cell padding-right-5 width-50 align-right'></div></div>
-                <div class='container'><div class='cell padding-right-5 width-50 align-right'>1,500.00 &#8369;</div></div>
+                <div class='container'><div class='cell padding-right-5 width-50 align-right'>P 1,500</div></div>
             </div>
         </div>
     </div>
@@ -45,7 +45,7 @@
             </div>
             <div class='cell'>
                 <div class='container'><div class='cell padding-right-5 width-50 align-right'></div></div>
-                <div class='container'><div class='cell padding-right-5 width-50 align-right'>3,000.00 &#8369;</div></div>
+                <div class='container'><div class='cell padding-right-5 width-50 align-right'>P 3,000</div></div>
             </div>
         </div>
     </div>
