--- a/src/app/app/remittance/components/confirm-remittance.component.html
+++ b/src/app/app/remittance/components/confirm-remittance.component.html
@@ -16,7 +16,7 @@
                             </div>
                             <div class='cell'>
                                 <div class='container'><div class='cell width-60 padding-right-5 align-right large red'>Unconfirmed</div></div>
-                                <div class='container'><div class='cell width-60 padding-right-5 align-right'>10,000.00 ₱</div></div>
+                                <div class='container'><div class='cell width-60 padding-right-5 align-right'>P 10,000.00</div></div>
                             </div>
                         </div>
                     </div>
