--- a/src/app/app/shared/components/home.component.html
+++ b/src/app/app/shared/components/home.component.html
@@ -35,7 +35,7 @@
         </div>      
     </div>
     <div class="double-divider" (click)="goToRemittance()"id="unserved-order">
-        <div class= "square-button border-bottom">
+        <div class= "square-button border-bottom border-right">
             <div class="icon remittance"></div>
             <div class="text">Remittance</div>
         </div>      
