--- a/src/app/app/basic-call-procedure/components/bcp-collection.component.html
+++ b/src/app/app/basic-call-procedure/components/bcp-collection.component.html
@@ -160,7 +160,7 @@
 	            </div>
 	        </div>
 	        <div class="container">
-	    		<input  type ="text" class ="input-90" id ="collection-amount" placeholder="PHP"/>	
+	    		<input  type ="text" class ="width-90 input-peso" id ="collection-amount" />	
 	        </div>
 	        <div class="container">
 	            <div class="cell">
