--- a/src/app/app/basic-call-procedure/components/confirm-collection.component.html
+++ b/src/app/app/basic-call-procedure/components/confirm-collection.component.html
@@ -20,7 +20,7 @@
 			</div>
 			<div class='cell'>
 				<div class='container'>
-					<div class='cell width-30 align-right green '>3000 ₱</div>
+					<div class='cell width-30 align-right green '>P 3000</div>
 				</div>
 			</div>
 			<div class='cell width-10'></div>
@@ -33,7 +33,7 @@
 			</div>
 			<div class='cell'>
 				<div class='container'>
-					<div class='cell width-30 align-right green '>1000 ₱</div>
+					<div class='cell width-30 align-right green '>P 1000</div>
 				</div>
 			</div>
 			<div class='cell width-10'></div>
@@ -46,7 +46,7 @@
 			</div>
 			<div class='cell'>
 				<div class='container'>
-					<div class='cell width-30 align-right green '>2000 ₱</div>
+					<div class='cell width-30 align-right green '>P 2000</div>
 				</div>
 			</div>
 			<div class='cell width-10'></div>
@@ -90,7 +90,7 @@
 				                <div class='container' id ="accRetMin"><div class='cell width-50 padding-left-5'>Balance Amount</div></div>
 					        </div>
 					        <div class='cell'>
-				                <div class='container' id ="accAmount"><div class='cell width-50 padding-right-5 align-right'>1,500 ₱</div></div>
+				                <div class='container' id ="accAmount"><div class='cell width-50 padding-right-5 align-right'>P 1,500</div></div>
 					        </div>
 					    </div>
                 	</div>
@@ -180,7 +180,7 @@
 				                <div class='container' id ="accRetMin"><div class='cell width-50 padding-left-5'>Balance Amount</div></div>
 					        </div>
 					        <div class='cell'>
-				                <div class='container' id ="accAmount"><div class='cell width-50 padding-right-5 align-right'>500 ₱</div></div>
+				                <div class='container' id ="accAmount"><div class='cell width-50 padding-right-5 align-right'>P 500</div></div>
 					        </div>
 					    </div>
                 	</div>
@@ -269,7 +269,7 @@
 				                <div class='container' id ="accRetMin"><div class='cell width-50 padding-left-5'>Balance Amount</div></div>
 					        </div>
 					        <div class='cell'>
-				                <div class='container' id ="accAmount"><div class='cell width-50 padding-right-5 align-right'>1,000 ₱</div></div>
+				                <div class='container' id ="accAmount"><div class='cell width-50 padding-right-5 align-right'>P 1,000</div></div>
 					        </div>
 					    </div>
                 	</div>
