--- a/src/app/app/basic-call-procedure/components/hc-basic-call-procedure.component.html
+++ b/src/app/app/basic-call-procedure/components/hc-basic-call-procedure.component.html
@@ -14,12 +14,12 @@
             <div class='cell'>
                 <div class='container'><div class='cell width-40 padding-left-5'>Rose Cell</div></div>
                 <div class='container'><div class='cell width-40 padding-left-5 italic'>99999900003</div></div>
-                <div class='container'><div class='cell width-40 padding-left-5'>Amount payable (5/8)</div></div>
+                <div class='container'><div class='cell width-40 padding-left-5 vivid-pink'>Amount receivable (5/8)</div></div>
             </div>
             <div class='cell'>
-                <div class='container'><div class='cell width-40 align-right bold'>In Progress</div></div>
+                <div class='container'><div class='cell width-40 align-right tosca'>In Progress</div></div>
                 <div class='container'><div class='cell width-40 align-right'></div></div>
-                <div class='container'><div class='cell width-40 align-right'>3,000.00 ₱</div></div>
+                <div class='container'><div class='cell width-40 align-right'>P 3,000</div></div>
             </div>
             <div class='cell width-10 arrow-right'></div>
         </div>
@@ -31,12 +31,12 @@
             <div class='cell'>
                 <div class='container'><div class='cell width-40 padding-left-5'>Bird Cell</div></div>
                 <div class='container'><div class='cell width-40 padding-left-5 italic'>99999900003</div></div>
-                <div class='container'><div class='cell width-40 padding-left-5'>Amount payable (1/3)</div></div>
+                <div class='container'><div class='cell width-40 padding-left-5 vivid-pink'>Amount receivable (1/3)</div></div>
             </div>
             <div class='cell'>
-                <div class='container'><div class='cell width-40 align-right bold'>Not Visited</div></div>
+                <div class='container'><div class='cell width-40 align-right vivid-pink'>Not Visited</div></div>
                 <div class='container'><div class='cell width-40 align-right'></div></div>
-                <div class='container'><div class='cell width-40 align-right'>3,000.00 ₱</div></div>
+                <div class='container'><div class='cell width-40 align-right'>P 3,000</div></div>
             </div>
             <div class='cell width-10 arrow-right'></div>
         </div>
@@ -48,12 +48,12 @@
             <div class='cell'>
                 <div class='container'><div class='cell width-40 padding-left-5'>Rose Cell</div></div>
                 <div class='container'><div class='cell width-40 padding-left-5 italic'>99999900003</div></div>
-                <div class='container'><div class='cell width-40 padding-left-5'>Amount payable (1/5)</div></div>
+                <div class='container'><div class='cell width-40 padding-left-5'>Amount receivable (0/5)</div></div>
             </div>
             <div class='cell'>
-                <div class='container'><div class='cell width-40 align-right bold'>Not Visited</div></div>
+                <div class='container'><div class='cell width-40 align-right vivid-pink'>Not Visited</div></div>
                 <div class='container'><div class='cell width-40 align-right'></div></div>
-                <div class='container'><div class='cell width-40 align-right'>3,000.00 ₱</div></div>
+                <div class='container'><div class='cell width-40 align-right'>P 3,000</div></div>
             </div>
             <div class='cell width-10 arrow-right'></div>
         </div>
