--- a/src/app/app/basic-call-procedure/components/hc-call-preparation.component.html
+++ b/src/app/app/basic-call-procedure/components/hc-call-preparation.component.html
@@ -108,7 +108,7 @@
 		<div class="container border">
 			<div class='cell'>
 		        <div class='container'><div class='cell width-100 padding-left-10 grey'>Amount Receivables</div></div>
-		        <div class='container'><div class='cell width-100 padding-left-10'>3,000.00 ₱</div></div>
+		        <div class='container'><div class='cell width-100 padding-left-10'>P 3,000.00</div></div>
 		    </div>
 		    <div class='cell width-10'></div>
 		</div>
@@ -122,7 +122,7 @@
 		<div class="container border">
 			<div class='cell'>
 		        <div class='container'><div class='cell width-100 padding-left-10 grey'>Threshold</div></div>
-		        <div class='container'><div class='cell width-100 padding-left-10'>1,000.00 ₱ </div></div>
+		        <div class='container'><div class='cell width-100 padding-left-10'>P 1,000.00</div></div>
 		    </div>
 		    <div class='cell width-10'></div>
 		</div>
@@ -157,7 +157,7 @@
 			        <div class='container'><div class='cell width-50 padding-left-10'>Outstanding Balance</div></div>
 			    </div>
 				<div class='cell'>
-			        <div class='container'><div class='cell width-40 align-right'>3000 ₱</div></div>
+			        <div class='container'><div class='cell width-40 align-right'>P 3000</div></div>
 			    </div>
 			    <div class='cell width-10'></div>
 			</div>
@@ -180,9 +180,9 @@
 			    </div>
 				<div class='cell'>
 			        <div class='container'><div class='cell width-40 align-right'>Amount</div></div>
-			        <div class='container'><div class='cell width-40 align-right'>800 ₱</div></div>
-			        <div class='container'><div class='cell width-40 align-right'>1,200 ₱</div></div>
-			        <div class='container'><div class='cell width-40 align-right'>400 ₱</div></div>
+			        <div class='container'><div class='cell width-40 align-right'>P 800</div></div>
+			        <div class='container'><div class='cell width-40 align-right'>P 1,200</div></div>
+			        <div class='container'><div class='cell width-40 align-right'>P 400</div></div>
 			    </div>
 			    <div class='cell width-10'></div>
 			</div>
@@ -200,7 +200,7 @@
 						        <div class='container'><div class='cell large width-50'>Total Load Wallet</div></div>
 						    </div>
 							<div class='cell'>
-						        <div class='container'><div class='cell large width-40 align-right'>1,000.00 ₱</div></div>
+						        <div class='container'><div class='cell large width-40 align-right'>P 1,000</div></div>
 						    </div>
 						</div>
 		        	</div>
@@ -243,9 +243,9 @@
 							        <div class='container'><div class='cell width-50 grey'>Latest Balance</div></div>
 							    </div>
 								<div class='cell'>
-							        <div class='container'><div class='cell width-50 align-right'>1,500 ₱</div></div>
+							        <div class='container'><div class='cell width-50 align-right'>P 1,500</div></div>
 							        <div class='container'><div class='cell width-50 align-right'>2016-04-01 11:10</div></div>
-							        <div class='container'><div class='cell width-50 align-right'>1,000 ₱</div></div>
+							        <div class='container'><div class='cell width-50 align-right'>P 1,000</div></div>
 							    </div>
 							</div>
 			        	</div>
@@ -287,9 +287,9 @@
 							        <div class='container'><div class='cell width-50 grey'>Latest Balance</div></div>
 							    </div>
 								<div class='cell'>
-							        <div class='container'><div class='cell width-50 align-right'>1,500 ₱</div></div>
+							        <div class='container'><div class='cell width-50 align-right'>P 1,500</div></div>
 							        <div class='container'><div class='cell width-50 align-right'>2016-04-01 11:10</div></div>
-							        <div class='container'><div class='cell width-50 align-right'>1,000 ₱</div></div>
+							        <div class='container'><div class='cell width-50 align-right'>P 1,000</div></div>
 							    </div>
 							</div>
 			        	</div>
