--- a/src/app/app/close-day/components/detail-remittance.component.html
+++ b/src/app/app/close-day/components/detail-remittance.component.html
@@ -10,7 +10,7 @@
 	    <div class="container">
 	        <div class='cell'>
                 <div class='container'>
-                	<div class='cell align-center width-100 large'>10,000.00 ₱</div>
+                	<div class='cell align-center width-100 large'>P 10,000</div>
                 </div>
 	        </div>
 	    </div>
@@ -40,7 +40,7 @@
 			</div>
 			<div class='cell'>
 				<div class='container'>
-					<div class='cell width-30 align-right'>5,000.00 ₱</div>
+					<div class='cell width-30 align-right'>P 5,000</div>
 				</div>
 			</div>
 			<div class='cell width-10'></div>
@@ -112,7 +112,7 @@
 			</div>
 			<div class='cell'>
 				<div class='container'>
-					<div class='cell width-30 align-right'>2,000.00 ₱</div>
+					<div class='cell width-30 align-right'>P 2,000</div>
 				</div>
 			</div>
 			<div class='cell width-10'></div>
@@ -165,7 +165,7 @@
 			</div>
 			<div class='cell'>
 				<div class='container'>
-					<div class='cell width-30 align-right'>3,000.00 ₱</div>
+					<div class='cell width-30 align-right'>P 3,000</div>
 				</div>
 			</div>
 			<div class='cell width-10'></div>
