--- a/src/app/app/remittance/components/remittance.component.html
+++ b/src/app/app/remittance/components/remittance.component.html
@@ -7,9 +7,9 @@
                 <div class='container'><div class='cell width-50 padding-left-5 large grey'>Unconfirmed</div></div>
             </div>
             <div class='cell'>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right large green'>30,000.00 ₱</div></div>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right large green'>10,000.00 ₱</div></div>
-                <div class='container'><div class='cell width-50 padding-right-5 align-right large green'>20,000.00 ₱</div></div>
+                <div class='container'><div class='cell width-50 padding-right-5 align-right large green'>P 30,000</div></div>
+                <div class='container'><div class='cell width-50 padding-right-5 align-right large green'>P 10,000</div></div>
+                <div class='container'><div class='cell width-50 padding-right-5 align-right large green'>P 20,000</div></div>
             </div>
         </div>
     </div>
@@ -40,7 +40,7 @@
                             </div>
                             <div class='cell'>
                                 <div class='container'><div class='cell width-50 padding-right-5 align-right large green'>Confirmed</div></div>
-                                <div class='container'><div class='cell width-50 padding-right-5 align-right'>10,000.00 ₱</div></div>
+                                <div class='container'><div class='cell width-50 padding-right-5 align-right'>P 10,000</div></div>
                             </div>
                         </div>
                     </div>
@@ -84,7 +84,7 @@
                             </div>
                             <div class='cell'>
                                 <div class='container'><div class='cell width-50 padding-right-5 align-right large red'>Unconfirmed</div></div>
-                                <div class='container'><div class='cell width-50 padding-right-5 align-right'>10,000.00 ₱</div></div>
+                                <div class='container'><div class='cell width-50 padding-right-5 align-right'>P 10,000</div></div>
                             </div>
                         </div>
                     </div>
