--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -649,8 +649,7 @@ GRID - TABLE CELL
             .margin-right-7 { margin-right: 7vw; }
 
             .red { color: $red };
-
-
+            .green { color: $green };
             
             &.small { font-size: 3vw; }
             &.large { font-size: 4.5vw; }
