--- a/src/app/scss/_global.scss
+++ b/src/app/scss/_global.scss
@@ -621,7 +621,6 @@ GRID - TABLE CELL
                     border-style: ridge;
                 }
             }
-
             
             // PLEASE PUT STYLE HERE
             &.padding-left-2 { padding-left: 2vw; }
@@ -643,7 +642,7 @@ GRID - TABLE CELL
             .margin-right-7 { margin-right: 7vw; }
 
             .red { color: $red };
-            .green { color: $green };
+            .apple { color: $apple };
             
             &.small { font-size: 3vw; }
             &.large { font-size: 4.5vw; }
