--- a/src/app/app/basic-call-procedure/components/add-edit-load-transfer.component.html
+++ b/src/app/app/basic-call-procedure/components/add-edit-load-transfer.component.html
@@ -59,9 +59,9 @@
                     </div>
                 </div>
                 <div class='cell'>
-                    <div class='container'><div class='cell width-60 padding-bottom-1 padding-right-5 padding-left-5 align-right'><input class='width-100' #promo (keyup)='setInputPromoCode(promo.value)' id="promo_code"/></div></div>
-                    <div class='container'><div class='cell width-60 padding-top-1 padding-bottom-1 padding-right-5 padding-left-5 align-right'><input class='width-100' #disc (keyup)='setInputDiscount(disc.value)' id="discount_amount" type="number" pattern="[0-9]+([,\.][0-9]+)?"/></div></div>
-                    <div class='container'><div class='cell width-60 padding-right-5 align-right' [ngClass]="{'red': (vTotalAmount < 0)}">P {{vTotalAmount | number}}</div></div>
+                    <div class='container'><div class='cell width-60 padding-bottom-1 padding-right-5 padding-left-5 align-right'><input class='width-100' [(ngModel)]='vInputPromoCode' id="promo_code"/></div></div>
+                    <div class='container'><div class='cell width-60 padding-top-1 padding-bottom-1 padding-right-5 padding-left-5 align-right'><input class='width-100' [(ngModel)]='vInputDiscountAmount' id="discount_amount" type="number" pattern="[0-9]+([,\.][0-9]+)?"/></div></div>
+                    <div class='container'><div class='cell width-60 padding-right-5 align-right' [ngClass]="{'red': (vTotalAmount < 0)}">P {{getTotalAmount()}}</div></div>
                 </div>
             </div>
         </div>
